name: kawhi-example
version: 0.0.1
synopsis: kawhi example
description: Please see README.md
homepage: https://github.com/thunky-monk/kawhi
license: MIT
license-file: LICENSE
author: Aaron Taylor
maintainer: aaron@hamsterdam.co
build-type: Simple
cabal-version: >=1.10

executable kawhi-example
    main-is: Main.hs
    ghc-options: -O1 -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base,
        aeson,
        kawhi
    default-language: Haskell2010
